Testing position to fix modal width error on mobile devices

--- a/mainCSS.css
+++ b/mainCSS.css
@@ -114,7 +114,7 @@ a {
     justify-content: space-between;
     padding: 2em 0;
     border-radius: 10px;
-    min-width: none;
+    position: relative;
 }
 
 .textFour {
